# glace

./: .gitignore  Cargo.toml  README.md  frag.spv  rust-toolchain
assets/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
glace/: Cargo.toml
glace-demo/: Cargo.toml  build.rs
glace-demo/shader/: Cargo.toml
glace-demo/shader/src/: lib.rs
glace-demo/src/: main.rs
glace-dis/: Cargo.toml
glace-dis/src/: main.rs
glace-grr/: Cargo.toml  build.rs
glace-grr/shader/: Cargo.toml
glace-grr/shader/src/: debug.rs  lib.rs  pbr.rs  skybox.rs
glace-grr/src/: main.rs
glace-vk/: Cargo.toml  build.rs
glace-vk/shader/: Cargo.toml
glace-vk/shader/src/: cube.rs  lib.rs
glace-vk/src/: device.rs  main.rs  swapchain.rs
glace-vk/src/gpu/: descriptor.rs  device.rs  instance.rs  mod.rs  swapchain.rs
glace/examples/: reorder.rs
glace/src/: arch.rs  bindless.rs  compute.rs  f32.rs  lib.rs  mat33.rs  mat43.rs  mat44.rs  ops.rs  ray.rs  sample.rs  u32.rs  vec2.rs  vec3.rs  vec4.rs
glace/src/algebra/: mat33.rs  mat44.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
glace/src/arch/: glsl.rs  subgroup.rs
glace/src/bezier/: mod.rs
glace/src/compute/: downsample.rs
glace/src/geometry/: fullscreen.rs  mod.rs
glace/src/hash/: mod.rs  pcg.rs
glace/src/microfacet/: distribution.rs  fresnel.rs
glace/src/sdf/: mod.rs
glacier/: Cargo.toml  build.rs
glacier/examples/: pathtrace.rs
glacier/shader/: Cargo.toml
glacier/shader/src/: lib.rs
glacier/src/: lib.rs
glacier/src/gpu/: device.rs  instance.rs  mod.rs  swapchain.rs
glacier/src/pass/: mod.rs
src/: camera.rs  main.rs
src/algebra/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/microfacet/: mod.rs
