[workspace]
members = [
    "glace",
    "glace-grr",
    "glace-grr/shader",
    "glace-vk",
    "glace-vk/shader",
    "glacier",
]

[profile.release]
codegen-units = 32

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 32

[patch.crates-io]
ash = { path = "../ash/ash" }
