[workspace]
members = [
    "glace",
    "glace-vk",
    "glace-vk/shader",
]

[profile.release]
codegen-units = 32

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 32

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git" }
ash-window = { git = "https://github.com/MaikKlein/ash.git" }
