[workspace]
members = [
    "glace",
    "glace-dis",
    "glacier",
    "glacier/shader",
]

[profile.dev]
codegen-units = 16
incremental = true

[profile.release]
codegen-units = 16
incremental = true

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 16
