[package]
name = "glace-dis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-tools = { git = "https://github.com/msiglreith/spirv-tools-rs.git", branch = "nv_bindless_texture" }
structopt = "0.3"
ash = "0.33"
