[package]
name = "glace-grr"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = { git = "https://github.com/msiglreith/grr.git" }
anyhow = "1"
image = "0.23"
winit = "0.24"
glace = { path = "../glace" }
byteorder = "1"
raw-gl-context = "0.1.2"
bincode = "1"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "4395b84114115752df2829c23109bb6c5048f4ec" } # must be git ref
anyhow = "1"
