[package]
name = "glace-vk"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32"
ash-window = "0.6"
winit = "0.24"
byteorder = "1"
anyhow = "1"
gpu-allocator = "0.6"
glace = { path = "../glace" }
image = "0.23"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "908487ae1dcbc0a3bf119294a4f12dd7bc87c218" } # must be git ref
anyhow = "1"

