[package]
name = "glace-vk"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32"
ash-window = "0.6"
winit = "0.24"
byteorder = "1"
anyhow = "1"
gpu-allocator = { version = "0.7", features = ["vulkan_device_address"] }
glace = { path = "../glace" }
image = "0.23"

[build-dependencies]
spirv-builder = { path = "../../rust-gpu/crates/spirv-builder" }
anyhow = "1"
