[package]
name = "glace"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-std = { git = "https://github.com/msiglreith/rust-gpu", branch = "glace" } # { path = "../../rust-gpu/crates/spirv-std" }
serde = { version = "1", optional = true, features = ["derive"] }
spirv-std-macros = "0.4.0-alpha.12"
