[package]
name = "shader-grr"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = "../.."

[lib]
crate-type = ["dylib"]

[dependencies]
glace = { path = "../../glace" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "4395b84114115752df2829c23109bb6c5048f4ec", features = ["const-generics"] }
spirv-std-macros = "0.4.0-alpha.3" # { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "561f0dd98466b150ef2ae95713e0cc5e8788cc54" }
