[package]
name = "shader"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
glace = { path = "../../glace" }
spirv-std = { path = "../../../rust-gpu/crates/spirv-std", features = ["const-generics"] }
spirv-std-macros = "0.4.0-alpha.7"
